<?xml version="1.0"?>
<package>
  <name>baxter_velocity_control</name>
  <version>0.0.0</version>
  <description>The baxter_velocity_control package</description>
  <maintainer email="romulo@todo.todo">romulo</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!-- <build_depend>liburdfdom-dev</build_depend> -->
  <!-- <build_depend>python_orocos_kdl</build_depend> -->
  <build_depend>tf</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <!-- <run_depend>urdfdom</run_depend> -->
  <!-- <run_depend>python_orocos_kdl</run_depend> -->
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
